--- a/src/main/resources/assets/mossy/lang/ru_ru.json
+++ b/src/main/resources/assets/mossy/lang/ru_ru.json
@@ -1,14 +1,24 @@
 {
-  "modmenu.descriptionTranslation.mossy": "Шаблонный Fabric мод с несколькими дополнительными фишками для моих проектов.",
+	"modmenu.descriptionTranslation.mossy": "Шаблонный Fabric мод с несколькими дополнительными фишками для моих проектов.",
+	"mossy.modmenu.title": "§lКлиенские настройки Mossy мода",
+	"mossy.modmenu.no_config_library_screen.message": "Вам нужно установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран настроек Mossy клиента\n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
 
-  "mossy.modmenu.title": "§lКлиенские настройки Mossy мода",
-  "mossy.modmenu.no_config_library_screen.message": "Вам нужно установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран настроек Mossy клиента\n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
+	"mossy.modmenu.category.secret_category.name": "§lСекрет",
 
-  "mossy.modmenu.mossy_group": "§lМшистый",
-  "mossy.modmenu.mossy_group.description": "Пример мшистого описания группы.",
-  "mossy.modmenu.mossy_group.option.mossy_option": "Мох",
-  "mossy.modmenu.mossy_group.option.mossy_option.description": "Пример мшистого описания опции.",
+	"mossy.modmenu.group.secret_group.name": "§lСекретная группа",
+	"mossy.modmenu.group.secret_group.description": "Пример описание секретной группы.",
 
-  "mossy.modmenu.formatter.enable_or_disable.true": "Включено",
-  "mossy.modmenu.formatter.enable_or_disable.false": "Отключено"
+	"mossy.modmenu.option.secret_option.name": "Секретная опция",
+	"mossy.modmenu.option.secret_option.description": "Пример описания секретной опции.",
+
+	"mossy.modmenu.category.general.name": "§lОсновное",
+
+	"mossy.modmenu.group.mossy_group.name": "§lМшистая группа",
+	"mossy.modmenu.group.mossy_group.description": "Пример мшистого описания группы.",
+
+	"mossy.modmenu.option.mossy_option.name": "Пушистая опция",
+	"mossy.modmenu.option.mossy_option.description": "Пример пушистого описания опции.",
+
+	"mossy.modmenu.formatter.enable_or_disable.true": "Включено",
+	"mossy.modmenu.formatter.enable_or_disable.false": "Отключено"
 }
