--- a/src/main/resources/assets/mossy/lang/en_us.json
+++ b/src/main/resources/assets/mossy/lang/en_us.json
@@ -1,7 +1,7 @@
 {
 	"modmenu.descriptionTranslation.mossy": "Template Fabric mod with some additional tweaks for my projects.",
-	"mossy.modmenu.title": "§lMossy Client-side Configuration",
-	"mossy.modmenu.no_config_library_screen.message": "You need to install §6§lYet Another Config Lib [YACL]§f to open Mossy Client Configuration Screen\n\n§a§lOpen §6§lYACL §a§lModrinth page?",
+	"mossy.modmenu.title": "§l${mod_name} Configuration",
+	"mossy.modmenu.no_config_library_screen.message": "You need to install §6§lYet Another Config Lib [YACL]§f to open ${mod_name} Configuration Screen\n\n§a§lOpen §6§lYACL §a§lModrinth page?",
 
 	"mossy.modmenu.category.secret_category.name": "§lSecret",
 
