--- a/src/main/resources/assets/mossy/lang/ru_ru.json
+++ b/src/main/resources/assets/mossy/lang/ru_ru.json
@@ -1,7 +1,7 @@
 {
 	"modmenu.descriptionTranslation.mossy": "Шаблонный Fabric мод с несколькими дополнительными фишками для моих проектов.",
-	"mossy.modmenu.title": "§lКлиенские настройки Mossy мода",
-	"mossy.modmenu.no_config_library_screen.message": "Вам нужно установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран настроек Mossy клиента\n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
+	"mossy.modmenu.title": "§l Конфигурация ${mod_name}",
+	"mossy.modmenu.no_config_library_screen.message": "Вам необходимо установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран конфигурации ${mod_name} \n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
 
 	"mossy.modmenu.category.secret_category.name": "§lСекрет",
 
