Updated lang files and added "testrender" package

--- a/src/main/resources/assets/mossy/lang/ru_ru.json
+++ b/src/main/resources/assets/mossy/lang/ru_ru.json
@@ -1,24 +1,24 @@
 {
-	"modmenu.descriptionTranslation.mossy": "Шаблонный Fabric мод с несколькими дополнительными фишками для моих проектов.",
-	"mossy.modmenu.title": "§l Конфигурация ${mod_name}",
-	"mossy.modmenu.no_config_library_screen.message": "Вам необходимо установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран конфигурации ${mod_name} \n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
+	"modmenu.descriptionTranslation.${mod_id}": "Шаблонный Fabric мод с несколькими дополнительными фишками для моих проектов.",
+	"${mod_id}.modmenu.title": "§l Конфигурация ${mod_name}",
+	"${mod_id}.modmenu.no_config_library_screen.message": "Вам необходимо установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран конфигурации ${mod_name} \n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
 
-	"mossy.modmenu.category.secret_category.name": "§lСекрет",
+	"${mod_id}.modmenu.category.secret_category.name": "§lСекрет",
 
-	"mossy.modmenu.group.secret_group.name": "§lСекретная группа",
-	"mossy.modmenu.group.secret_group.description": "Пример описание секретной группы.",
+	"${mod_id}.modmenu.group.secret_group.name": "§lСекретная группа",
+	"${mod_id}.modmenu.group.secret_group.description": "Пример описание секретной группы.",
 
-	"mossy.modmenu.option.secret_option.name": "Секретная опция",
-	"mossy.modmenu.option.secret_option.description": "Пример описания секретной опции.",
+	"${mod_id}.modmenu.option.secret_option.name": "Секретная опция",
+	"${mod_id}.modmenu.option.secret_option.description": "Пример описания секретной опции.",
 
-	"mossy.modmenu.category.general.name": "§lОсновное",
+	"${mod_id}.modmenu.category.general.name": "§lОсновное",
 
-	"mossy.modmenu.group.mossy_group.name": "§lМшистая группа",
-	"mossy.modmenu.group.mossy_group.description": "Пример мшистого описания группы.",
+	"${mod_id}.modmenu.group.mossy_group.name": "§lМшистая группа",
+	"${mod_id}.modmenu.group.mossy_group.description": "Пример мшистого описания группы.",
 
-	"mossy.modmenu.option.mossy_option.name": "Пушистая опция",
-	"mossy.modmenu.option.mossy_option.description": "Пример пушистого описания опции.",
+	"${mod_id}.modmenu.option.mossy_option.name": "Пушистая опция",
+	"${mod_id}.modmenu.option.mossy_option.description": "Пример пушистого описания опции.",
 
-	"mossy.modmenu.formatter.enabled_or_disabled.true": "Включено",
-	"mossy.modmenu.formatter.enabled_or_disabled.false": "Отключено"
+	"${mod_id}.modmenu.formatter.enabled_or_disabled.true": "Включено",
+	"${mod_id}.modmenu.formatter.enabled_or_disabled.false": "Отключено"
 }
