--- a/src/main/resources/assets/mossy/lang/ru_ru.json
+++ b/src/main/resources/assets/mossy/lang/ru_ru.json
@@ -1,15 +1,6 @@
 {
 	"modmenu.descriptionTranslation.${mod_id}": "Шаблонный Fabric мод с несколькими дополнительными фишками для моих проектов.",
 	"${mod_id}.modmenu.title": "§l Конфигурация ${mod_name}",
-	"${mod_id}.modmenu.no_config_library_screen.message": "Вам необходимо установить §6§lYet Another Config Lib [YACL]§f, чтобы открыть экран конфигурации ${mod_name} \n\n§a§lОткрыть страницу §6§lYACL §a§lна Modrinth?",
-
-	"${mod_id}.modmenu.category.secret_category.name": "§lСекрет",
-
-	"${mod_id}.modmenu.group.secret_group.name": "§lСекретная группа",
-	"${mod_id}.modmenu.group.secret_group.description": "Пример описание секретной группы.",
-
-	"${mod_id}.modmenu.option.secret_option.name": "Секретная опция",
-	"${mod_id}.modmenu.option.secret_option.description": "Пример описания секретной опции.",
 
 	"${mod_id}.modmenu.category.general.name": "§lОсновное",
 
@@ -17,8 +8,5 @@
 	"${mod_id}.modmenu.group.mossy_group.description": "Пример мшистого описания группы.",
 
 	"${mod_id}.modmenu.option.mossy_option.name": "Пушистая опция",
-	"${mod_id}.modmenu.option.mossy_option.description": "Пример пушистого описания опции.",
-
-	"${mod_id}.modmenu.formatter.enabled_or_disabled.true": "Включено",
-	"${mod_id}.modmenu.formatter.enabled_or_disabled.false": "Отключено"
+	"${mod_id}.modmenu.option.mossy_option.description": "Пример пушистого описания опции."
 }
